k8s/apps/guazza/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guazza
  labels:
    app.kubernetes.io/name: guazza
