k8s/apps/guazza/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guazza-web
  namespace: guazza
spec:
  type: ClusterIP
  selector:
    app: guazza-web
  ports:
    - name: http
      port: 8080
      targetPort: http
